# smalldrop

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md
smalldrop/smalldrop/: CMakeLists.txt  package.xml
smalldrop/smalldrop_bioprint/: CMakeLists.txt  package.xml
smalldrop/smalldrop_bioprint/config/: config.yaml  test_config.yaml
smalldrop/smalldrop_bioprint/include/smalldrop_bioprint/: bioprinter.h  system_config.h  system_state.h
smalldrop/smalldrop_bioprint/launch/: camera_calibration.launch  smalldrop.launch
smalldrop/smalldrop_bioprint/models/: smalldrop.urdf.xacro
smalldrop/smalldrop_bioprint/robots/: smalldrop.urdf.xacro
smalldrop/smalldrop_bioprint/src/nodes/: bioprinter.cpp
smalldrop/smalldrop_bioprint/src/smalldrop_bioprint/: bioprinter.cpp  system_config.cpp  system_state.cpp
smalldrop/smalldrop_bioprint/test/: t_system_config.test
smalldrop/smalldrop_bioprint/test/smalldrop_bioprint/: t_bioprinter.cpp  t_system_config_rostest.cpp
smalldrop/smalldrop_msgs/: CMakeLists.txt  package.xml
smalldrop/smalldrop_msgs/msg/: JointPositions.msg  PoseEuler.msg  Tau.msg  TrackingError.msg
smalldrop/smalldrop_msgs/srv/: SetOperationMode.srv  SetPathType.srv
smalldrop/smalldrop_robot_arm/: CMakeLists.txt  controllers_plugin.xml  package.xml
smalldrop/smalldrop_robot_arm/cfg/: CartesianImpedanceRealController.cfg  CartesianImpedanceSimController.cfg  JointPositionPIDSimController.cfg
smalldrop/smalldrop_robot_arm/config/: config.yaml  panda_control.yaml
smalldrop/smalldrop_robot_arm/include/smalldrop_robot_arm/: cartesian_impedance_real_controller.h  cartesian_impedance_sim_controller.h  gravity_compensation_real_controller.h  joint_position_pid_sim_controller.h  robot_arm_controller.h  robot_arm_joint_controller.h
smalldrop/smalldrop_robot_arm/launch/: cartesian_impedance_real_controller.launch  cartesian_impedance_sim_controller.launch  create_empty_sim_world.launch  create_hospital_room_sim_world.launch  create_sim_world.launch  franka_control.launch  full_simulation.launch  gravity_compensation_real_controller.launch  joint_position_pid_sim_controller.launch
smalldrop/smalldrop_robot_arm/models/emergency_console/: model.config  model.sdf
smalldrop/smalldrop_robot_arm/models/hospital_bed/: model.config
smalldrop/smalldrop_robot_arm/models/patient/: model.config
smalldrop/smalldrop_robot_arm/models/patient_room/: model.sdf
smalldrop/smalldrop_robot_arm/models/serum_support/: model.config
smalldrop/smalldrop_robot_arm/models/service_cart/: model.config
smalldrop/smalldrop_robot_arm/models/support_table/: model.config
smalldrop/smalldrop_robot_arm/models/tv/: model.config
smalldrop/smalldrop_robot_arm/robots/: hand.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
smalldrop/smalldrop_robot_arm/rviz/: config_tests.rviz
smalldrop/smalldrop_robot_arm/src/controllers/: cartesian_impedance_real_controller.cpp  cartesian_impedance_sim_controller.cpp  gravity_compensation_real_controller.cpp  joint_position_pid_sim_controller.cpp  robot_arm_controller.cpp  robot_arm_joint_controller.cpp
smalldrop/smalldrop_robot_arm/src/gazebo_plugins/: create_sim_world.cc
smalldrop/smalldrop_robot_arm/src/nodes/: execute_trajectory.cpp  gazebo_models_to_rviz_node.cpp  move_to_joint_config.cpp  move_to_start.cpp
smalldrop/smalldrop_robot_arm/worlds/: empty.world  hospital_room.world
smalldrop/smalldrop_rviz/: CMakeLists.txt  package.xml
smalldrop/smalldrop_rviz/rviz/: config.rviz  config_real.rviz  config_sim.rviz  config_test_camera.rviz  config_tests.rviz
smalldrop/smalldrop_rviz/scripts/: controller_error_plot.py  debug_data.py  trajectory_tracking.py  trajectory_tracking_errors_plot.sh  trajectory_tracking_plot.sh
smalldrop/smalldrop_rviz/src/nodes/: gazebo_models_to_rviz_node.cpp  toolpath_viewer.cpp  toolpath_viewer_camera.cpp  validate_wound_position.cpp
smalldrop/smalldrop_segmentation/: CMakeLists.txt  package.xml
smalldrop/smalldrop_segmentation/include/smalldrop_segmentation/: i_wound_segmentation.h  wound_segmentation_camera.h  wound_segmentation_camera_binarization.h  wound_segmentation_comanip.h  wound_segmentation_comanip_convex_hull.h
smalldrop/smalldrop_segmentation/src/smalldrop_segmentation/: wound_segmentation_camera.cpp  wound_segmentation_camera_binarization.cpp  wound_segmentation_comanip.cpp  wound_segmentation_comanip_convex_hull.cpp
smalldrop/smalldrop_segmentation/test/smalldrop_segmentation/: t_wound_segmentation_comanip_convex_hull_gtest.cpp
smalldrop/smalldrop_state/: CMakeLists.txt  package.xml
smalldrop/smalldrop_state/include/smalldrop_state/: exceptions.h  system_state.h
smalldrop/smalldrop_state/src/smalldrop_state/: system_state.cpp
smalldrop/smalldrop_teleoperation/: CMakeLists.txt  package.xml
smalldrop/smalldrop_teleoperation/include/smalldrop_teleoperation/: i_remote_controller.h  i_remote_controller_mode.h  remote_controller.h  remote_controller_mode.h  spacemouse.h  teleoperation_actions.h
smalldrop/smalldrop_teleoperation/launch/: default_teleoperation.launch  system_teleoperation.launch
smalldrop/smalldrop_teleoperation/src/nodes/: default_teleoperation.cpp
smalldrop/smalldrop_teleoperation/src/smalldrop_teleoperation/: remote_controller.cpp  remote_controller_mode.cpp  spacemouse.cpp  teleoperation_actions.cpp
smalldrop/smalldrop_teleoperation/test/: t_spacemouse.test
smalldrop/smalldrop_teleoperation/test/smalldrop_teleoperation/: t_remote_controller_mode.cpp  t_remote_controller_mode_gtest.cpp  t_spacemouse.cpp  t_spacemouse_gtest.cpp  t_spacemouse_rostest.cpp
smalldrop/smalldrop_toolpath/: CMakeLists.txt  package.xml
smalldrop/smalldrop_toolpath/include/smalldrop_toolpath/: circle.h  circular_spiral.h  grid.h  line.h  (+7 more)
smalldrop/smalldrop_vision/: CMakeLists.txt  package.xml
smalldrop/smalldrop_vision/config/: config.yaml
smalldrop/smalldrop_vision/launch/: camera.launch
smalldrop/smalldrop_vision/models/: realsense2_d415.urdf.xacro
smalldrop/smalldrop_vision/robots/: realsense2_d415.urdf.xacro
(+126 files in other folders)
