<?xml version="1.0"?>
<package format="2">
  <name>smalldrop</name>
  <version>0.2.4</version>
  <description>The smalldrop metapackage.</description>
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>smalldrop_robot_arm</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
