<?xml version="1.0"?>
<package format="2">
  <name>smalldrop_bioprint</name>
  <version>0.3.0</version>
  <description>
    Controls the whole smalldrop system.
  </description>
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- SmallDrop specific packages -->
  <depend>smalldrop_robot_arm</depend>
  <depend>smalldrop_msgs</depend>
  <depend>smalldrop_rviz</depend>

  <export></export>
</package>
