<?xml version="1.0"?>
<package format="2">
  <name>smalldrop_robot_arm</name>
  <version>0.3.0</version>
  <description>
    Package responsible for handling robot arm control for real robot and simulation. 
    It explicitly depends on franka_ros packages.
  </description>
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>kdl_parser</depend> <!-- For simulation -->
  <depend>gazebo_ros</depend> <!-- For simulation -->
  <build_depend>eigen</build_depend>

  <depend>franka_hw</depend> <!-- For real robot -->
  <depend>controller_interface</depend> <!-- For real robot -->
  
  <doc_depend>doxygen</doc_depend>
  
  <export>
    <!-- Add controllers libraries to ROS control -->
    <controller_interface plugin="${prefix}/controllers_plugin.xml"/>
    <!-- Add models folder to gazebo model path -->
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/models" />
  </export>
</package>
