<?xml version="1.0"?>
<package format="2">
  <name>smalldrop_rviz</name>
  <version>0.4.0</version>
  <description>
    Package responsible for managing everything related with rviz.
  </description>
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend> <!-- For simulation -->
  <depend>cv_bridge</depend>
  
  <depend>smalldrop_msgs</depend>
  <depend>smalldrop_state</depend>
  <depend>smalldrop_toolpath</depend>
  <depend>smalldrop_segmentation</depend>

  <doc_depend>doxygen</doc_depend>
  
  <export></export>
</package>
