<?xml version="1.0"?>
<package format="2">
  <name>smalldrop_segmentation</name>
  <version>0.4.0</version>
  <description>Provides wound segmentation algorithms, for co-manipulation mode and when using a camera.</description>  
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
