<?xml version="1.0"?>
<package format="2">
  <name>smalldrop_state</name>
  <version>0.3.0</version>
  <description>
    Handles the system state and some general ROS publishers that can be used by the other smalldrop packages.
  </description>
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
