<?xml version="1.0"?>
<package format="2">
  <name>smalldrop_teleoperation</name>
  <version>0.3.0</version>
  <description>
    Manages the teleoperation of the robot arm by providing interfaces for remote controllers.
  </description>
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>spacenav_node</depend>
  <depend>smalldrop_state</depend>

  <export></export>
</package>
