<?xml version="1.0"?>
<package format="2">
  <name>smalldrop_toolpath</name>
  <version>0.4.0</version>
  <description>Manages path and trajectory planning algorithms for the robot arm.</description>
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <depend>smalldrop_state</depend>

  <export/>
</package>
