<?xml version="1.0"?>
<package format="2">
  <name>smalldrop_vision</name>
  <version>0.5.0</version>
  <description>Manages the vision system composed of cameras and lasers.</description>
  <maintainer email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</maintainer>
  <author email="rjt16079@campus.fct.unl.pt">Ricardo Tonet</author>
  <url type="repository">https://github.com/blackchacal/smalldrop</url>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>realsense2_camera</depend> <!-- For real camera usage -->
  <depend>realsense2_description</depend> <!-- For real camera usage -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend> <!-- For camera simulation -->
  <depend>camera_info_manager</depend> <!-- For camera simulation -->
  <exec_depend>depth_image_proc</exec_depend> <!-- For camera simulation -->
  <depend>pcl_ros</depend> <!-- For point cloud manipulation -->

  <depend>smalldrop_segmentation</depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
